--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "#Your code here\n",
     "import sqlite3\n",
-    "conn = sqlite3"
+    "conn = sqlite3.connect('pla')"
    ]
   },
   {
