--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -45,13 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Your code here\n",
     "import sqlite3\n",
-    "conn = sqlite3.connect('plants.db')"
+    "conn = sqlite3.connect('plants')"
    ]
   },
   {
