Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,8 @@
    "source": [
     "#Your code here\n",
     "import sqlite3\n",
-    "conn = sqlite3.connect('plants.db')"
+    "conn = sqlite3.connect('plants.db')\n",
+    "c = "
    ]
   },
   {
