--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-a759e0b7860d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m c.execute(\"\"\" SELECT name, color\n\u001b[0;32m----> 3\u001b[0;31m FROM planets;\"\"\")\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-4-9186c2091e28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m c.execute(\"\"\" SELECT name, color\n\u001b[0;32m----> 3\u001b[0;31m FROM planets\"\"\")\n\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0m: no such table: planets"
      ]
     }
@@ -114,7 +114,7 @@
    "source": [
     "#Your code here\n",
     "c.execute(\"\"\" SELECT name, color\n",
-    "FROM planets;\"\"\")"
+    "FROM planets\"\"\")"
    ]
   },
   {
