Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "#Your code here\n",
     "import sqlite3\n",
     "conn = sqlite3.connect('plants.db')\n",
-    "c = conn.cursor()"
+    "c3 = conn.cursor()"
    ]
   },
   {
