Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,8 +113,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c3.execute(\"\"\" SELECT name, color\n",
-    "FROM planets \"\"\")"
+    "c3.execute(\"\"\" SELECT name, color FROM planets \"\"\")"
    ]
   },
   {
