--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c3.execute(\"\"\" SELECT name, color FROM planets \"\"\")"
+    "c3.execute(\"\"\" SELECT name, color FROM planets; \"\"\")"
    ]
   },
   {
