--- a/index.ipynb
+++ b/index.ipynb
@@ -113,6 +113,7 @@
    ],
    "source": [
     "#Your code here\n",
+    "import pandas as \n",
     "c3.execute(\"\"\" SELECT name, color FROM planets; \"\"\")"
    ]
   },
