Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "import pandas as \n",
+    "import pandas as pd\n",
     "c3.execute(\"\"\" SELECT name, color FROM planets; \"\"\")"
    ]
   },
