Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,8 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "c3.execute(\"\"\" SELECT name, color FROM planets; \"\"\")"
+    "c3.execute(\"\"\" SELECT name, color FROM planets; \"\"\")\n",
+    "df_name = pd.DataFrame"
    ]
   },
   {
