Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
     "#Your code here\n",
     "import pandas as pd\n",
     "c3.execute(\"\"\" SELECT name, color FROM planets; \"\"\")\n",
-    "df_name = pd.DataFrame"
+    "df_name = pd.DataFrame(c3.fe )"
    ]
   },
   {
