--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Getting the name of all ta"
+   ]
   },
   {
    "cell_type": "markdown",
