Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Getting the name of all ta"
+    "## Getting the name of all tables"
    ]
   },
   {
