Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,6 +65,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "field_dict = {}\n",
+    "\n",
+    "for tab_name in df_master.name:\n",
+    "    sql_2 = \"\"\"\n",
+    "\n",
+    "    SELECT * FROM {}\n",
+    "\n",
+    "    \"\"\".format(tab_name)\n",
+    "    c.execute(sql_2)\n",
+    "    field_dict.update({tab_name: [x[0] for x in c.description]})\n",
+    "\n",
+    "    \n",
+    "print(\"table names: {}\".format(list(field_dict.keys())))\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "for tab_name in field_dict.keys():\n",
+    "    print(\"\"\"columns in table \"{}\": {}\\n\"\"\".format(tab_name, field_dict[tab_name]))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
